Fixed overflow issue for rotating button

--- a/styles/index.css
+++ b/styles/index.css
@@ -180,6 +180,10 @@ html, body {
     font-size: 1.5rem;
 }
 
+.go-down-btn svg {
+    overflow: visible;
+}
+
 .go-down-btn text {
     font-size: 0.75rem;
     transform-origin: center;
